# hermesclawsol

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  package-lock.json  package.json
agent/: package.json
agent/src/: bags-launch.ts  deployer.ts  hermes.ts  index.ts  loop.ts  security-gate.ts  telegram-bot.ts  treasury.ts  x-bot.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/components/: navbar.tsx
app/src/app/dapps/: page.tsx
app/src/app/logs/: page.tsx
app/src/app/treasury/: page.tsx
docs/: ARCHITECTURE.md  TOKENOMICS.md  X-PERSONA.md
programs/hermes-launchpad/: Cargo.toml
programs/hermes-launchpad/src/: lib.rs
programs/hermes-nft/: Cargo.toml
programs/hermes-nft/src/: lib.rs
programs/hermes-prediction/: Cargo.toml
programs/hermes-prediction/src/: lib.rs
programs/hermes-staking/: Cargo.toml
programs/hermes-staking/src/: lib.rs
programs/hermes-treasury/: Cargo.toml
programs/hermes-treasury/src/: lib.rs
templates/: launchpad-config.json  nft-config.json  prediction-config.json  staking-config.json  token-config.json
token-gate/: .env.example  package-lock.json  package.json  tsconfig.json
token-gate/bot/: index.ts
token-gate/src/app/: globals.css  layout.tsx  page.tsx
token-gate/src/app/api/nonce/: route.ts
token-gate/src/app/api/recheck/: route.ts
token-gate/src/app/api/verify/: route.ts
token-gate/src/app/verify/: page.tsx
token-gate/src/lib/: nonce.ts  store.ts  token.ts
