[package]
name = "hermes-nft"
version = "0.1.0"
description = "Agent-generated NFT collection minting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hermes_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
